[package]
name = "paragraph"
version = "0.0.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a line-breaking algorithm."
documentation = "https://bodoni.github.io/paragraph"
homepage = "https://github.com/bodoni/paragraph"
repository = "https://github.com/bodoni/paragraph"
